fix: overflow issues

--- a/src/features/unit-calculator/unit-calculator.component.css
+++ b/src/features/unit-calculator/unit-calculator.component.css
@@ -3,6 +3,7 @@
     height: 100%;
     min-height: 100vh;
     padding: 0 0 16px 0;
+    overflow-y: auto;
 }
 
 .UnitCalculator .UnitLists {
@@ -21,6 +22,7 @@
 .UnitCalculator .Main {
     display: flex;
     justify-content: space-around;
+    padding-bottom: 16px;
 }
 
 .UnitCalculator .Main .Upgrades {
